--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 
 <div class="article-meta">
-  <h1 id="title">Error 404</h1>
+  <h1 class="title">Error 404</h1>
 
   <h2> The page you're looking for does not exist!</h2>
 
