--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 
   <div class="article-meta">
-    <h1 id="title">{{ .Title | markdownify }}</h1>
+    <h1 class="title">{{ .Title | markdownify }}</h1>
   </div>
 
 
