turn font as variable in scss

--- a/assets/scss/libs/main-content.scss
+++ b/assets/scss/libs/main-content.scss
@@ -60,7 +60,7 @@
         }
 
         ol li::marker {
-            font-family: "Bangers";
+            font-family: $ftfati;
             font-size: $ftsz7;
             color: $prim3;
         }
