--- a/assets/scss/libs/vars.scss
+++ b/assets/scss/libs/vars.scss
@@ -1,3 +1,9 @@
+// Font-family
+$ftfati: 'Bangers';
+$ftfatx: 'Fira Sans', sans-serif;
+// code
+$ftfaco: 'Fira Code', monospace;
+
 // Font-size 
 $ftsz1: 2.6rem;
 $ftsz2: 2rem;
