--- a/assets/scss/libs/vars.scss
+++ b/assets/scss/libs/vars.scss
@@ -3,6 +3,8 @@ $ftfati: 'Bangers';
 $ftfatx: 'Fira Sans', sans-serif;
 // code
 $ftfaco: 'Fira Code', monospace;
+// fontawesome
+$ftfawe: 'Font Awesome 6 Free';
 
 // Font-size 
 $ftsz1: 2.6rem;
