--- a/assets/scss/libs/main-content.scss
+++ b/assets/scss/libs/main-content.scss
@@ -16,19 +16,17 @@
         width: 100%;
         display: flex;
         flex-direction: column;
-        min-height: 88vh;
-        padding: 0rem;
+        min-height: 85vh;
     }
 
 }
 
 .ctt-main-content {
-    width: 100%;
-    margin-bottom: 2vh;
     font-size: $ftsz7;
     color: $prim2;
-    padding-left: 0.5rem;
-    padding-right: 0.75rem;
+    margin-bottom: 1rem;
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
 
     @media #{$small-low} {
         flex: 1 0 auto;
@@ -49,9 +47,9 @@
         color: $prim2;
 
         .date {
+
             color: $prim1;
             font-size: $ftsz10;
-            padding-left: .3rem;
         }
 
         ol li {
@@ -82,11 +80,22 @@
     }
 
     .article-meta {
-        h1 {
-            margin: 1.2rem 0rem 1.2rem 0rem;
-        }
 
         text-align: center;
+        margin-bottom: .8rem;
+
+        h1 {
+            margin: 1rem 0rem 0.75rem 0rem;
+        }
+
+        h2 {
+            margin: 0.5rem 0rem 0.25rem 0rem;
+        }
+
+                h4 {
+                    margin: 0.5rem 0rem 0.25rem 0rem;
+                }
+
 
         .tags {
             margin-top: .8rem;
@@ -111,14 +120,9 @@
             }
         }
 
-        margin-bottom: .8rem;
+
     }
 
-    .article-meta,
-    .article-main,
-    .listings {
-        padding: 0% 3.2% 1% 3.2%;
-    }
 
     .footnotes {
         margin-top: 2.8rem;
