--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -4,14 +4,18 @@
 <div class="article-meta">
 
   <h1 class="title">{{ .Title | markdownify }}</h1>
-  {{ with .Params.author }}<h2 id="author">{{ . }}</h2>{{ end }}
+  {{ with .Params.author }}
+    <h2 class="author">{{ . }}</h2>
+  {{ end }}
   {{ if .Params.date }}
-    <h3 class="date">{{ .Date.Format "January 2, 2006" }}
+    <h4 class="date">
+      <i class="fas fa-calendar"></i>&nbsp;{{ .Date.Format "January 2, 2006" }}
+    </h4>
   {{ end }}
 
   {{ if .Params.tags }}
     <div class="tags">
-      <i class="fas fa-tags" aria-hidden="true"></i> &nbsp;
+      <i class="fas fa-tags" aria-hidden="true"></i>&nbsp;
       {{ range .Params.tags }}
         <a href="/tags/{{ . | urlize }}"> <kbd class="item-tag">{{ . }}</kbd></a>
       {{ end }}
