improve handling of js scripts

--- a/assets/scss/libs/sidebar-primary.scss
+++ b/assets/scss/libs/sidebar-primary.scss
@@ -102,7 +102,7 @@
         display: none;
     }
 
-    .dropdown-cuurent {
+    .dropdown-current {
         width: 100%;
         display: block;
     }
