--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -27,7 +27,6 @@
                 {{ end }}
             </div>
 
-
             <div class="footer2">
                 {{ partial "footer.html" . }}
             </div>
@@ -35,14 +34,13 @@
         </div>
 
         <div class="ctn-sidebar-secondary">
-            <div class="ctt-sidebar-secondary">
+            <div class="ctt-sidebar-secondary" id="sidebar-secondary">
                 {{ partial "sidebar-secondary.html" . }}
             </div>
         </div>
 
-    </div>
+    </div>    
 
-    
 </body>
 
 </html>
