--- a/layouts/partials/sidebar-secondary.html
+++ b/layouts/partials/sidebar-secondary.html
@@ -1,6 +1,10 @@
-<h1><a href="#"><i class='far fas fa-chevron-up'></i></a></h1>
+<h1>
+    <a onclick="scrollToTop()">
+        <i class='far fas fa-chevron-up'></i>
+    </a>
+</h1>
 
-<script src="/js/sidebar-secondary.js"></script>
+<script>collectTitles();</script>
 
 <h1>
     <a onclick="scrollToBottom()">
