--- a/layouts/partials/sidebar-primary.html
+++ b/layouts/partials/sidebar-primary.html
@@ -1,15 +1,16 @@
 <h1> {{ .Site.Title }} </h1>
 
 <div class="primary-sidebar-premenu">
-    <h2> <i class='fas fa-align-center'></i> <button onclick="dropDown('p-s-menu')"> Menu </button> </h2>
+    <h2> <i class='fas fa-align-center'></i> <button onclick="toggle('p-s-menu')"> Menu </button> </h2>
 </div>
 
 <div class="primary-sidebar-menu" id="p-s-menu">
     
 {{ if .Site.Menus.main }} 
     {{ $url := urls.Parse $.Permalink }}
-    {{ $loc := $url.Path | replaceRE "/([^/]+).*" "$1"  }}
+    {{ $loc := $url | path.Base  }}
     {{ range sort .Site.Menus.main }}
+        {{ $name := .Name | lower }}
         {{ $cur := .URL | replaceRE "/([^/]+).*" "$1" }}
         {{ if .HasChildren }}
             {{ $i := false }}
@@ -21,7 +22,7 @@
             {{ end }}
 
             {{ if $i }}<h2 id="current-dropdown">{{ else }}<h2>{{ end }}
-            <a onclick="dropDown('dropdown-{{  .Identifier }}')" href="javascript:void(0)">{{ .Name | markdownify }}</a>
+            <a onclick="toggle('dropdown-{{  .Identifier }}')" href="javascript:void(0)">{{ .Name | markdownify }}</a>
             </h2>
 
             {{ if $i }}
@@ -40,8 +41,14 @@
                 {{ end }}
             </div>
         {{ else }}
-            {{ if eq $loc $cur }}<h2 id="current">{{ else }}<h2>{{ end }}
-            <a href="{{ .URL }}">{{ .Name | markdownify }}</a>
+            {{ if eq $name $loc }}
+                <h2 id="current">
+            {{ else if and ($.IsHome) (eq $name "home") }}
+                <h2 id="current"> 
+            {{ else }}
+                <h2>
+            {{ end }}
+                <a href="{{ .URL }}">{{ .Name | markdownify }}</a>
             </h2>
         {{ end }}
 
