--- a/assets/scss/libs/sidebar-primary.scss
+++ b/assets/scss/libs/sidebar-primary.scss
@@ -37,6 +37,9 @@
     padding: 0.75rem;
 
     @media #{$small-low} {
+        padding: 0rem;
+        margin: 0rem;
+
         h1 {
             margin: 1rem 0rem 1rem 0rem;
             font-size: $ftsz1;
