--- a/assets/scss/libs/sidebar-primary.scss
+++ b/assets/scss/libs/sidebar-primary.scss
@@ -5,8 +5,8 @@
     align-self: flex-start;
     top: 0px;
     flex-flow: row wrap;
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
 
     width: 20%;
     background-color: $prim2;
