--- a/layouts/partials/sidebar-primary.html
+++ b/layouts/partials/sidebar-primary.html
@@ -1,7 +1,7 @@
 <h1> {{ .Site.Title }} </h1>
 
 <div class="primary-sidebar-premenu">
-    <h2> <i class='fas fa-align-center'></i> <button onclick="toggle('p-s-menu')"> Menu </button> </h2>
+    <h2> <button onclick="toggle('p-s-menu')"> <i class='fas fa-align-center fa-3x'></i></button> </h2>
 </div>
 
 <div class="primary-sidebar-menu" id="p-s-menu">
